--- a/new-vine-code-assessment/src/App.css
+++ b/new-vine-code-assessment/src/App.css
@@ -17,11 +17,12 @@
   border-radius: 10px;
   border: 3px solid rgb(0, 38, 255);
   padding: 0 25px;
+  transition: 1s;
 }
 
 .modal-open-btn:hover {
   cursor: pointer;
-  background: linear-gradient(to right, rgba(255, 0, 0, 0.555), rgb(0, 0, 0), blue);
+  transform: scale(1.15);
   display: inline-block;
   border: 3px solid yellow;
   border-radius: 10px;
