--- a/new-vine-code-assessment/src/css/modal.css
+++ b/new-vine-code-assessment/src/css/modal.css
@@ -67,6 +67,7 @@
 .column-1 {
     width: 60%;
     height: 100%;
+    margin-top: 20px;
 }
 
 .import-dropdown {
@@ -98,6 +99,7 @@
     width: 50%;
     background: white;
     border-radius: 10px;
+    z-index: 13;
 }
 
 .dropdown-content p {
@@ -114,7 +116,7 @@
 
 .file-import {
     width: 80%;
-    height: 70%;
+    height: 60%;
     padding-left: 10px;
     margin-left: 15px;
     text-align: left;
@@ -122,12 +124,16 @@
     flex-direction: column;
 }
 
+.file-import h5 {
+    margin: 10px 0;
+}
+
 .upload-box {
     border: 1px solid rgba(46, 46, 161, 0.137);
     border-radius: 10px;
     padding: 10px;
     width: 100%;
-    height: 60%;
+    height: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -228,6 +234,7 @@
     margin-left: 25px;
     margin-top: 10px;
     height: 10%;
+    width: 100%;
 }
 
 .tolerance-window h5 {
@@ -236,8 +243,15 @@
 
 .tolerance-switch {
     height: 30px;
-    width: 45px;
+    width: 100%;
     margin-top: -15px;
+}
+
+.tolerance-switch .toggle {
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 100%;
 }
 
 .switch-checkbox {
@@ -272,7 +286,7 @@
     box-shadow: 0 0 2px 0 rgba(152, 2, 172, 0.29);
 }
 
-.switch-checkbox:checked + .switch-label .switch-button {
+.toggle .right {
     left: calc(100% - 2px);
     transform: translateX(-100%);
 }
@@ -356,7 +370,7 @@
     min-width: fit-content;
 }
 .client-selection .dropdown .dropdown-content {
-    z-index: 11;
+    z-index: 13;
 }
 .client-selection .dropdown span {
     text-align: left;
@@ -392,9 +406,16 @@
     position: relative;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1500px) {
     .split-schedule-dropdown-1, .split-schedule-dropdown-2, .split-schedule-dropdown-3, .split-schedule-dropdown-4 {
-        min-width: 50%;
+        min-width: 60%;
+        margin-left: 15px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .split-schedule-dropdown-1, .split-schedule-dropdown-2, .split-schedule-dropdown-3, .split-schedule-dropdown-4 {
+        min-width: 40%;
     }
 }
 
